--- a/static/style.css
+++ b/static/style.css
@@ -579,59 +579,64 @@
   
 
        /* Estilo para los botones del teclado */
-		.key {
-			display: inline-block;
-			border: 1px solid black;
-			padding: 5px;
-			margin: 5px;
-			cursor: pointer;
-			font-size: 16px;
-			border-radius: 5px;
-		}
-
-		/* Estilo para el contenedor del teclado */
-		.keyboard {
-      position: absolute;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-			align-items: center;
-			background-color: #d6d6d6;
-			padding: 10px;
-			border-radius: 10px;
-      top: 50%;
-      left: 0%;
-      z-index: 2;
-      width: 30%;
+       #keyboard {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #f1f1f1;
+        border: 1px solid #ccc;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        z-index: 999;
+        display: none;
+        width: 400px;
+        border-radius: 10px;
+        padding: 10px;
+        box-sizing: border-box;
+        cursor: move;
+      }
       
-		}
-
-    .modalteclado {
-      position: fixed;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: none;
-    }
-    
-    .modalteclado.mostrar {
-      display: block;
-    }
-    
-    .modal-contenidotecla {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: white;
-      padding: 20px;
-      width: 80%;
-      max-width: 500px;
-    }
-    
-
+      .keyboard-row {
+        display: flex;
+        margin-bottom: 10px;
+      }
+      
+      .key {
+        padding: 10px;
+        font-size: 1.2em;
+        border: none;
+        background-color: #fff;
+        margin: 2px;
+        flex-grow: 1;
+        box-sizing: border-box;
+        cursor: pointer;
+        border-radius: 5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      }
+      
+      .key:hover {
+        background-color: #dcdcdc;
+      }
+      
+      .wide {
+        flex-grow: 3;
+      }
+      
+      #close-keyboard {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        font-size: 1.5em;
+        background: none;
+        border: none;
+        cursor: pointer;
+        color: #555;
+      }
+      
+      #close-keyboard:hover {
+        color: #000;
+      }
+      
    
 
   /* body {
